--- a/style.css
+++ b/style.css
@@ -1,55 +1,345 @@
 
 *{
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
+
 aside.div,section,header,footer,nav{
     display: block;
+}
+body{
+    font-family: "Arial", sans-serif;
 }
 /*reset*/
 html,body, #wrapper{
     margin: 0;
     padding: 0;
 }
+nav{
+    float: right!important;
+}
+p{
+    display: block;
+    padding: 5%;
+}
+
+li{
+    padding: 5%;
+    display: inline-block;
+}
+
 [class*="col-"]{
     float: left;
     padding: 0 15px;
 }
+/*menu*/
+a.menu-link {
+    float: right;
+    display: block;
+    padding: 1em;
+}
+nav[role=navigation] {
+    clear: both;
+    -webkit-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
+    -ms-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
+}
+.js nav[role=navigation] {
+    overflow: hidden;
+    max-height: 0;
+}
+nav[role=navigation].active {
+    max-height: 15em;
+}
+nav[role=navigation] ul {
+    margin: 0;
+    padding: 0;
+    border-top: 1px solid #808080;
+}
+nav[role=navigation] li a {
+    display: block;
+    padding: 0.8em;
+    border-bottom: 1px solid #808080;
+}
+
+@media screen and (min-width: 48.25em) {
+    a.menu-link {
+        display: none;
+    }
+    .js nav[role=navigation] {
+        max-height: none;
+    }
+    nav[role=navigation] ul {
+        margin: 0 0 0 -0.25em;
+        border: 0;
+    }
+
+    nav[role=navigation]  li {
+        display: inline-block;
+        margin: 0 0.25em;
+    }
+    nav[role=navigation] li a {
+        border: 0;
+        color: white;
+        list-style-type: none;
+    }
+}
+
+/*carousel*/
+.Carousel-container{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow:hidden;
+}
+
+figure {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity:0;
+    /*animation*/
+
+    animation: slideShow 24s linear infinite 0s;
+    -o-animation: slideShow 24s linear infinite 0s;
+    -moz-animation: slideShow 24s linear infinite 0s;
+    -webkit-animation: slideShow 24s linear infinite 0s;
+}
+
+figure:first-child {
+    opacity: 1;
+    background: url(img/pic1.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+figure:nth-child(2) {
+    animation-delay: 6s;
+    -o-animation-delay: 6s;
+    -moz-animation-delay: 6s;
+    -webkit-animation-delay: 6s;
+    background: url(img/pic2.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+figure:nth-child(3) {
+    animation-delay: 12s;
+    -o-animation-delay: 12s;
+    -moz-animation-delay: 12s;
+    -webkit-animation-delay: 12s;
+    background: url(img/pic3.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+figure:nth-child(4) {
+    animation-delay: 18s;
+    -o-animation-delay: 18s;
+    -moz-animation-delay: 18s;
+    -webkit-animation-delay: 18s;
+    background: url(img/pic4.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+figure:nth-child(5) {
+    animation-delay: 24s;
+    -o-animation-delay: 24s;
+    -moz-animation-delay: 24s;
+    -webkit-animation-delay: 24s;
+    background: url(img/pic5.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+figure:nth-child(6) {
+    animation-delay: 30s;
+    -o-animation-delay: 30s;
+    -moz-animation-delay: 30s;
+    -webkit-animation-delay: 30s;
+    background: url(img/pic6.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+figure:nth-child(7) {
+    animation-delay: 36s;
+    -o-animation-delay: 36s;
+    -moz-animation-delay: 36s;
+    -webkit-animation-delay: 36s;
+    background: url(img/pic7.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+figure:nth-child(8) {
+    animation-delay: 42s;
+    -o-animation-delay: 42s;
+    -moz-animation-delay: 42s;
+    -webkit-animation-delay: 42s;
+    background: url(img/pic8.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+figure:nth-child(9) {
+    animation-delay: 48s;
+    -o-animation-delay: 48s;
+    -moz-animation-delay: 48s;
+    -webkit-animation-delay: 48s;
+    background: url(img/pic9.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+figure:nth-child(10) {
+    animation-delay: 54s;
+    -o-animation-delay: 54s;
+    -moz-animation-delay: 54s;
+    -webkit-animation-delay: 54s;
+    background: url(img/pic10.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+figure:nth-child(11) {
+    animation-delay: 60s;
+    -o-animation-delay: 60s;
+    -moz-animation-delay: 60s;
+    -webkit-animation-delay: 60s;
+    background: url(img/pic11.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+figure:nth-child(12) {
+    animation-delay: 66s;
+    -o-animation-delay: 66s;
+    -moz-animation-delay: 66s;
+    -webkit-animation-delay: 66s;
+    background: url(img/pic12.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+/* keyframes*/
+
+@keyframes slideShow {
+    0% {
+        opacity: 0;
+        transform:scale(1);
+        -ms-transform:scale(1);
+    }
+    4% {
+        opacity: 1
+    }
+    24% {
+        opacity: 1;
+    }
+    28% {
+        opacity: 0;
+        transform:scale(1.1);
+        -ms-transform:scale(1.1);
+    }
+    100% {
+        opacity: 0;
+        transform:scale(1);
+        -ms-transform:scale(1);
+    }
+}
+
+@-o-keyframes slideShow {
+    0% {
+        opacity: 0;
+        -o-transform:scale(1);
+    }
+    4% {
+        opacity: 1
+    }
+    24% {
+        opacity: 1;
+    }
+    28% {
+        opacity: 0;
+        -o-transform:scale(1.1);
+    }
+    100% {
+        opacity: 0;
+        -o-transform:scale(1);
+    }
+}
+
+@-moz-keyframes slideShow {
+    0% {
+        opacity: 0;
+        -moz-transform:scale(1);
+    }
+    4% {
+        opacity: 1
+    }
+    24% {
+        opacity: 1;
+    }
+    28% {
+        opacity: 0;
+        -moz-transform:scale(1.1);
+    }
+    100% {
+        opacity: 0;
+        -moz-transform:scale(1);
+    }
+}
+
+@-webkit-keyframes slideShow {
+    0% {
+        opacity: 0;
+        -webkit-transform:scale(1);
+    }
+    4% {
+        opacity: 1
+    }
+    24% {
+        opacity: 1;
+    }
+    28% {
+        opacity: 0;
+        -webkit-transform:scale(1.1);
+    }
+    100% {
+        opacity: 0;
+        -webkit-transform:scale(1);
+    }
+}
+
+
+
 /*container permetteant de garder les elements dans un container sans que ceux ci remonte*/
 .row:after{
     content: "";
     clear: both;
     display: block;
 }
-
-/***********************************debut koko**********************************************/
-li {
-    font-size: small;
-    list-style: none;
-    display: inline;
-}
-/********* reglages des images **********/
-img[alt*="york"]{
-
-    position: relative;
-    max-width: 100%;
-}
-
-img[alt*="logo"]{
-    position: absolute;
-    max-width: 100%;
-    border: solid red 2px;
-}
-
-article{
-
-    text-align: center;
-    background-color: lightblue;
-    height: 200px;
-    padding: 1em;
-}
-/*****************fin image*******************/
-/***************************************fin koko************************************************/
-
 /*classe colonne grid*/
 .col-1{
     width: 8.33333333%;
@@ -104,45 +394,6 @@ article{
     height: 100%;
     background-color: white;
 }
-
-/*offset*/
-.col-offset-1{
-    margin-left: 8.33333333%;
-}
-.col-offset-2{
-    margin-left: 16.6666667%;
-}
-.col-offset-3{
-    margin-left: 25%;
-}
-.col-offset-4{
-    margin-left: 33.3333333%;
-}
-.col-offset-5{
-    margin-left: 41.6666667%;
-}
-.col-offset-6{
-    margin-left: 50%;
-}
-.col-offset-7{
-    margin-left: 58.3333333%;
-}
-.col-offset-8{
-    margin-left: 66.6666666%;
-}
-.col-offset-9{
-    margin-left: 75%;
-}
-.col-offset-10{
-    margin-left: 83.3333333%;
-}
-.col-offset-11{
-    margin-left: 91.6666666%;
-}
-.col-offset-12{
-    margin-left: 100%;
-}
-
 /* Portrait et Landscape tablette*/
 @media only screen
 and (max-width: 768px) {
@@ -183,5 +434,9 @@ and (max-width: 768px) {
     .col-t12{
         width: 100%;
     }
+
+}
+@media only screen
+and (max-width: 768px) {
 
 }
